--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,4 +1,10 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "banner";
+@import "cards_incident";
+@import "footer";
+@import "main";
 @import "navbar";
+
+
