--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,24 +1,36 @@
-<h2>Sign up</h2>
+<h2>S'inscrire</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :email,
+                label: "Email",
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "email" }%>
     <%= f.input :password,
+                label: "Mot de passe",
                 required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
+                hint: ("#{@minimum_password_length}
+                caractères minimum" if @minimum_password_length),
+                input_html: { autocomplete: "new_password" } %>
     <%= f.input :password_confirmation,
+                label: "Confirmation mot de passe",
                 required: true,
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "new_password" } %>
+    <%= f.input :first_name,
+                label: "Prénom",
+                required: true,
+                input_html: { autocomplete: "first_name" } %>
+    <%= f.input :last_name,
+                label: "Nom de famille",
+                required: true,
+                input_html: { autocomplete: "last_name" } %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Enregistrer" %>
   </div>
 <% end %>
 
