--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -2,6 +2,8 @@
 // 1. All Bootstrap variables are here => https://github.com/twbs/bootstrap/blob/master/scss/_variables.scss
 // 2. These variables are defined with default value (see https://robots.thoughtbot.com/sass-default)
 // 3. You can override them below!
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR|Noto+Serif&display=swap');
+
 
 // General style
 $font-family-sans-serif:  $body-font;
@@ -23,3 +25,6 @@ $border-radius-lg: 2px;
 $border-radius-sm: 2px;
 
 // Override other variables below!
+
+$base-font: 'Noto Sans KR', sans-serif;
+$title-font: 'Noto Serif', serif;
