Fonts / colors / Homepage

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,10 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+// Project colors
+
+$dark-green: #1D4D4F;
+$hover-green: #357376;
+$light-green: #6BA8A9;
+$grey: #E5DFDF;
