--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,66 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<!-- banner -->
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1462899006636-339e08d1844e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80);">
+  <div class="container text-center">
+    <h1>Libérez vous des contraintes de votre logement</h1>
+
+  </div>
+
+</div>
+
+<!-- Présentation du concept -->
+
+<div class="container-fluid" id="concept">
+  <h1 class="text-center">Comment ca marche ? </h1>
+
+  <div class="row text-center justify-content-center">
+    <div id="owner" class="profil-link">
+      Proprietaires
+    </div>
+    <div id="renter" class="profil-link">
+      Locataires
+    </div>
+    <div class="inline-border mb-3">
+    </div>
+  </div>
+
+  <div class="row justify-content-center">
+    <div id="owner-body" class='profil-body'>
+      <div class="row justify-content-between">
+        <div class="col-3 concept-column">
+          <div class="concept-number-rounded">
+            1
+          </div>
+          <div class="concept-title">
+            <h4>Gestion réactive et moderne</h4>
+          </div>
+          <div class="concept-description">
+             Votre <span class="text-green">espace en ligne</span> vous permet de suivre toutes les opérations et de <span class="text-green">contacter facilement</span> votre locataire.
+          </div>
+        </div>
+        <div class="col-3 concept-column">
+          <div class="concept-number-rounded">
+            2
+          </div>
+        </div>
+        <div class="col-3 concept-column">
+          <div class="concept-number-rounded">
+            3
+          </div>
+        </div>
+        <div class="col-3 concept-column">
+          <div class="concept-number-rounded">
+            4
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div id="renter-body" class='profil-body d-none'></div>
+  </div>
+
+
+</div>
+
+<!-- Encart presse -->
+
+<!-- Encart témoignages clients -->
