--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,8 +26,10 @@
           </div>
         </li>
       <% else %>
-        <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+        <li class="nav-item d-flex">
+          <p class="mt-2"> Vous êtes propriétaires ? </p>
+          <%= link_to "Connexion", new_user_session_path, class: "nav-link" %>
+          <%= link_to "Inscription", new_user_registration_path, class: "nav-link" %>
         </li>
       <% end %>
     </ul>
