--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,17 +9,15 @@
 
 <!-- Présentation du concept -->
 
-<div class="container-fluid" id="concept">
+<div class="container" id="concept">
   <h1 class="text-center">Comment ca marche ? </h1>
 
-  <div class="row text-center justify-content-center">
-    <div id="owner" class="profil-link">
+  <div class="row text-center justify-content-center" id="concept-row">
+    <div id="owner" class="profil-link profil-link-active">
       Proprietaires
     </div>
     <div id="renter" class="profil-link">
       Locataires
-    </div>
-    <div class="inline-border mb-3">
     </div>
   </div>
 
@@ -41,21 +39,85 @@
           <div class="concept-number-rounded">
             2
           </div>
+          <div class="concept-title">
+            <h4>Centralisation de vos biens</h4>
+          </div>
+          <div class="concept-description">
+             L'ensemble de vos appartements <span class="text-green">accessibles en un clic</span> dans une plateforme <span class="text-green">unique et intuitive.</span>
+          </div>
         </div>
         <div class="col-3 concept-column">
           <div class="concept-number-rounded">
             3
+          </div>
+          <div class="concept-title">
+            <h4>Autonomisation de vos locataires</h4>
+          </div>
+          <div class="concept-description">
+             Identifiez des <span class="text-green">artisans de confiance</span> et permettez à vos locataires de <span class="text-green">gérer les incidents en toute autonomie.</span>
           </div>
         </div>
         <div class="col-3 concept-column">
           <div class="concept-number-rounded">
             4
           </div>
+          <div class="concept-title">
+            <h4>Réalisation d'économie</h4>
+          </div>
+          <div class="concept-description">
+             Optez pour <span class="text-green">Homelib</span> et affranchissez vous des coûts exorbitants pratiqués par les agences immobilières locales.
+          </div>
         </div>
       </div>
 
     </div>
-    <div id="renter-body" class='profil-body d-none'></div>
+    <div id="renter-body" class='profil-body d-none'>
+      <div class="row justify-content-between">
+        <div class="col-3 concept-column">
+          <div class="concept-number-rounded">
+            1
+          </div>
+          <div class="concept-title">
+            <h4>Gestion réactive et moderne</h4>
+          </div>
+          <div class="concept-description">
+             Votre <span class="text-green">espace en ligne</span> vous permet de suivre toutes les opérations et de <span class="text-green">contacter facilement</span> votre locataire.
+          </div>
+        </div>
+        <div class="col-3 concept-column">
+          <div class="concept-number-rounded">
+            2
+          </div>
+          <div class="concept-title">
+            <h4>Centralisation de vos biens</h4>
+          </div>
+          <div class="concept-description">
+             L'ensemble de vos appartements <span class="text-green">accessibles en un clic</span> dans une plateforme <span class="text-green">unique et intuitive</span>
+          </div>
+        </div>
+        <div class="col-3 concept-column">
+          <div class="concept-number-rounded">
+            3
+          </div>
+          <div class="concept-title">
+            <h4>Centralisation de vos biens</h4>
+          </div>
+          <div class="concept-description">
+             L'ensemble de vos appartements <span class="text-green">accessibles en un clic</span> dans une plateforme <span class="text-green">unique et intuitive</span>
+          </div>
+        </div>
+        <div class="col-3 concept-column">
+          <div class="concept-number-rounded">
+            4
+          </div>
+          <div class="concept-title">
+            <h4>Centralisation de vos biens</h4>
+          </div>
+          <div class="concept-description">
+             L'ensemble de vos appartements <span class="text-green">accessibles en un clic</span> dans une plateforme <span class="text-green">unique et intuitive</span>
+          </div>
+        </div>
+    </div>
   </div>
 
 
