style form not finish

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -36,7 +36,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Mettre à jour" %>
+    <%= f.button :submit, "Mettre à jour", class: 'btn btn-primary'  %>
   </div>
 <% end %>
 
