--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -81,7 +81,7 @@
             <h4>Gestion réactive et moderne</h4>
           </div>
           <div class="concept-description">
-             Votre <span class="text-green">espace en ligne</span> vous permet de suivre toutes les opérations et de <span class="text-green">contacter facilement</span> votre locataire.
+             Votre <span class="text-green">espace en ligne</span> vous permet de déclarer <span class="text-green">un incident</span> en quelques clics.
           </div>
         </div>
         <div class="col-3 concept-column">
@@ -89,10 +89,10 @@
             2
           </div>
           <div class="concept-title">
-            <h4>Centralisation de vos biens</h4>
+            <h4>Intervention simplifiée</h4>
           </div>
           <div class="concept-description">
-             L'ensemble de vos appartements <span class="text-green">accessibles en un clic</span> dans une plateforme <span class="text-green">unique et intuitive</span>
+            La plateforme vous <span class="text-green">aide à identifier clairement</span> le problème et vous oriente vers un <span class="text-green">artisan de confiance validé par votre propriétaire</span>.
           </div>
         </div>
         <div class="col-3 concept-column">
@@ -100,10 +100,10 @@
             3
           </div>
           <div class="concept-title">
-            <h4>Centralisation de vos biens</h4>
+            <h4>Espace documentaire sécurisé</h4>
           </div>
           <div class="concept-description">
-             L'ensemble de vos appartements <span class="text-green">accessibles en un clic</span> dans une plateforme <span class="text-green">unique et intuitive</span>
+             Stockez l'ensemble des documents et contrats dans <span class="text-green">votre espace sécurisé</span> et accédez directement à vos quittances de loyer.
           </div>
         </div>
         <div class="col-3 concept-column">
@@ -111,10 +111,10 @@
             4
           </div>
           <div class="concept-title">
-            <h4>Centralisation de vos biens</h4>
+            <h4>Paiement du loyer en ligne</h4>
           </div>
           <div class="concept-description">
-             L'ensemble de vos appartements <span class="text-green">accessibles en un clic</span> dans une plateforme <span class="text-green">unique et intuitive</span>
+             Payez votre loyer <span class="text-green">directement en ligne depuis la plateforme</span> et <span class="text-green">programmez vos règlements automatisés</span>.
           </div>
         </div>
     </div>
@@ -124,5 +124,7 @@
 </div>
 
 <!-- Encart presse -->
+
+
 
 <!-- Encart témoignages clients -->
