--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div class="row justify-content-center">
-    <div id="owner-body" class='profil-body'>
+    <div id="owner-body" class='profil-body' cursor=pointer>
       <div class="row justify-content-between">
         <div class="col-3 concept-column">
           <div class="concept-number-rounded">
