--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -20,6 +20,10 @@
 }
 
 .initial {
+  display: inline-block;
+  min-width: 55px;
+  min-height: 55px;
+  margin-bottom: 0 !important;
   padding: 7px;
   background: $grey;
 }
