--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -11,7 +11,7 @@ $light-gray: #F4F4F4;
 
 // Project colors
 
-$dark-green: #1D4D4F;
-$hover-green: #357376;
-$light-green: #6BA8A9;
-$grey: #E5DFDF;
+$dark-green: #1D4D4F;  //button color
+$hover-green: #357376; //texte sur fond blanc
+$light-green: #6BA8A9; // hover
+$grey: #E5DFDF; // fond de page
