--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div class="row justify-content-center">
-    <div id="owner-body" class='profil-body' cursor=pointer>
+    <div id="owner-body" class='profil-body'>
       <div class="row justify-content-between">
         <div class="col-3 concept-column">
           <div class="concept-number-rounded">
@@ -119,10 +119,42 @@
         </div>
     </div>
   </div>
+</div>
 
+<!-- Encart témoignages clients -->
 
+<div class="container d-flex">
+  <div class="arrow-left">
+    <i class="fas fa-arrow-circle-left"></i>
+  </div>
+
+  <div class="grid-wrapper justify-content-center">
+    <div class="card" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
+  </div>
+  <div class="arrow-right">
+    <i class="fas fa-arrow-circle-right"></i>
+  </div>
 </div>
 
 <!-- Encart presse -->
 
-<!-- Encart témoignages clients -->
