add incident errors messages in a partial and insert it in dashboard"

--- a/app/views/pages/dashboard.erb
+++ b/app/views/pages/dashboard.erb
@@ -147,6 +147,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 </div>
 
+<%= render 'incidents/errors', incident: @incident %>
 
 <script>
 // Get the modal
