--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,37 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+}
+
+.navbar-lewagon-default {
+  background-color: white;
+  transition: 0.5s background-color ease;
+
+  .nav-item .nav-link {
+    color: black;
+  }
+
+  .nav-welcome {
+    color: black;
+    margin: 8px;
+    margin-right: 235px;
+    font-weight: bold;
+  }
+}
+
+.navbar-lewagon-banner {
+  background-color: rgba(0,0,0,0.2);
+  transition: 0.5s background-color ease;
+
+  .nav-item .nav-link {
+    color: white;
+  }
+
+  .nav-welcome {
+    color: white;
+    margin: 8px;
+    margin-right: 235px;
+    font-weight: bold;
+  }
 }
 
 .navbar-lewagon .navbar-collapse {
