--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -59,3 +59,21 @@
   grid-gap: 10px;
   grid-auto-rows: minmax(100px, auto);
 }
+
+.fas {
+  align-self: center;
+}
+
+.card-title {
+  color: $dark-green;
+}
+
+.card img {
+  width: 100%;
+  height: 170px;
+  object-fit: cover;
+}
+
+
+
+
