--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -22,6 +22,14 @@
   background-color: rgba(0,0,0,0.2);
   transition: 0.5s background-color ease;
 
+  .navbar-brand {
+    color: white;
+  }
+
+  p {
+    color:white;
+  }
+
   .nav-item .nav-link {
     color: white;
   }
