--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,5 @@
 <!-- banner -->
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1462899006636-339e08d1844e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80);">
-
-  <span id="banner-typed-text"></span>
-
-</div>
+<%= render 'shared/banner' %>
 
 <!-- Présentation du concept -->
 
@@ -125,11 +121,6 @@
   <div class="title text-center">
     <h1><span class="text-green">Nos clients témoignent</span></h1>
   </div>
-  <div class="fake-carousel">
-    <div class="arrow-left">
-      <i class="fas fa-arrow-circle-left"></i>
-    </div>
-
     <div class="grid-wrapper justify-content-center">
       <div class="card" style="width: 18rem;">
         <img src="https://ichef.bbci.co.uk/news/660/cpsprodpb/F8C6/production/_103568636_gettyimages-1036307366.jpg" class="card-img-top" alt="...">
@@ -153,10 +144,6 @@
         </div>
       </div>
     </div>
-    <div class="arrow-right">
-      <i class="fas fa-arrow-circle-right"></i>
-    </div>
-  </div>
 </div>
 
 <!-- Encart presse -->
