--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 <!-- Présentation du concept -->
 
 <div class="container" id="concept">
-  <h1 class="text-center">Comment ca marche ? </h1>
+  <h1 class="concept-title text-center">Comment ca marche ? </h1>
 
   <div class="row text-center justify-content-center" id="concept-row">
     <div id="owner" class="profil-link profil-link-active">
@@ -118,7 +118,7 @@
 <!-- Encart témoignages clients -->
 
 <div class="container mt-5">
-  <div class="title text-center">
+  <div class="title text-center mb-5">
     <h1><span class="text-green">Nos clients témoignent</span></h1>
   </div>
     <div class="grid-wrapper justify-content-center">
@@ -130,17 +130,17 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="https://img.aws.la-croix.com/2019/04/02/1201013023/chanteuse-Angele-dernieres-Victoires-musique_0_728_486.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">Balance ton agence !</h5>
+          <p class="card-text"> Avant mon agence m'appelait toutes les semaines pour un problème avec mes apparts.. Maitenant je suis sur Homelib et mon locataire gère seul !</p>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img src="https://assets.about.me/background/users/e/d/o/edouardfoussier_1521739259_661.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">J'ai arrêté de me poser des questions</h5>
-          <p class="card-text">Ah !!! Homelib, me permet de savoir directement si je vais devoir payer les conneries de mes potes en after ou si mon proprio est responsable !</p>
+          <p class="card-text">Ah !!! Homelib me permet de savoir directement si je vais devoir payer les conneries de mes potes en after ou si mon proprio est responsable !</p>
         </div>
       </div>
     </div>
