--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
   <div class="row justify-content-center">
     <div id="owner-body" class='profil-body'>
       <div class="row justify-content-between">
-        <div class="col-3 concept-column">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-3 concept-column">
           <div class="concept-number-rounded">
             1
           </div>
@@ -29,7 +29,7 @@
              Votre <span class="text-green">espace en ligne</span> vous permet de suivre toutes les opérations et de <span class="text-green">contacter facilement</span> votre locataire.
           </div>
         </div>
-        <div class="col-3 concept-column">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-3 concept-column">
           <div class="concept-number-rounded">
             2
           </div>
@@ -40,7 +40,7 @@
              L'ensemble de vos appartements <span class="text-green">accessibles en un clic</span> dans une plateforme <span class="text-green">unique et intuitive.</span>
           </div>
         </div>
-        <div class="col-3 concept-column">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-3 concept-column">
           <div class="concept-number-rounded">
             3
           </div>
@@ -51,7 +51,7 @@
              Identifiez des <span class="text-green">artisans de confiance</span> et permettez à vos locataires de <span class="text-green">gérer les incidents en toute autonomie.</span>
           </div>
         </div>
-        <div class="col-3 concept-column">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-3 concept-column">
           <div class="concept-number-rounded">
             4
           </div>
@@ -67,7 +67,7 @@
     </div>
     <div id="renter-body" class='profil-body d-none'>
       <div class="row justify-content-between">
-        <div class="col-3 concept-column">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-3 concept-column">
           <div class="concept-number-rounded">
             1
           </div>
@@ -78,7 +78,7 @@
              Votre <span class="text-green">espace en ligne</span> vous permet de déclarer <span class="text-green">un incident</span> en quelques clics.
           </div>
         </div>
-        <div class="col-3 concept-column">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-3 concept-column">
           <div class="concept-number-rounded">
             2
           </div>
@@ -89,7 +89,7 @@
             La plateforme vous <span class="text-green">aide à identifier clairement</span> le problème et vous oriente vers un <span class="text-green">artisan de confiance validé par votre propriétaire</span>.
           </div>
         </div>
-        <div class="col-3 concept-column">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-3 concept-column">
           <div class="concept-number-rounded">
             3
           </div>
@@ -100,7 +100,7 @@
              Stockez l'ensemble des documents et contrats dans <span class="text-green">votre espace sécurisé</span> et accédez directement à vos quittances de loyer.
           </div>
         </div>
-        <div class="col-3 concept-column">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-3 concept-column">
           <div class="concept-number-rounded">
             4
           </div>
