--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,6 +2,7 @@
 @import "alert";
 @import "avatar";
 @import "banner";
+@import "button";
 @import "cards_incident";
 @import "footer";
 @import "form";
