--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,7 +1,19 @@
+.table {
+  border-bottom: 1px solid #ddd;
+  padding: 0.75rem;
+  font-weight: normal;
+    overflow: scroll;
+  td {
+    font-size : 20px;
+    padding : 6px;
+  }
+}
+
 .upper-part {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 16px;
+
 }
 
 .upper {
