--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -18,34 +18,28 @@
     </div>
 
     <div class="upper right">
-      <h1>Mes Loyers</h1>
-        <table class="table-rentals table">
-        <tbody>
-        <% @last_rents.each do |rent| %>
-          <% if rent.status == pending  %>
-            <tr>
-              <td><%= rental.product.brand %></td>
-              <td><%= rental.product.category %></td>
-              <td><%= rental.date_start %></td>
-              <td><%= rental.date_end %></td>
-              <td><%= rental.user.first_name %></td>
-              <td><%= rental.product.price * (rental.date_end - rental.date_start + 1 ).to_i %>€ </td>
-              <td><% if policy(rental).edit? %>
-                  <%= link_to '<i class="fas fa-pencil-alt"></i>'.html_safe, edit_rental_path(rental) %>
-                <% end %></td>
-              <td><% if policy(rental).destroy? %>
-                  <%= link_to '<i class="far fa-trash-alt"></i>'.html_safe, rental, :method => :delete, data: { confirm: 'Are you sure?' }  %>
-                <% end %></td>
-            </tr>
-          <% end %>
-
-
-        <% end  %>
-        </tbody>
-      </table>
-
-
-      </div>
+      <% if @rental %>
+        <div class='loyers'>
+          <table class="table-Loyers table">
+            <h1>Mes Loyers</h1>
+            <tbody>
+            <% @last_rents.each do |rent| %>
+              <tr>
+                <td><%= rent.date.strftime('%B') %></td>
+                <td><%= @rental.loyer %></td>
+                <% if rent.status == "Payé" %>
+                  <td><i class="fas fa-check-circle text-success"></i></td>
+                  <td><%= link_to "Quittence", "#", class: "btn btn-gradient" %></td>
+                <% else %>
+                  <td><i class="fas fa-times-circle text-danger" ></i></td>
+                  <td><%= link_to "Payer", "#", class: "btn btn-gradient payer" %></td>
+                <% end %>
+              </tr>
+            <% end %>
+            </tbody>
+          </table>
+        </div>
+      <% end %>
     </div>
   </div>
 
