--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
 
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto align-items-center">
+    <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active">
           <%= link_to "Home", root_path, class: "nav-link" %>
@@ -25,17 +25,22 @@
         <% end %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Action", "#", class: "dropdown-item" %>
-            <%= link_to "Another action", "#", class: "dropdown-item" %>
-            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+            <%= link_to "Editer mon profil", edit_user_registration_path , class: "dropdown-item" %>
+            <%= link_to "Se déconnecter", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
       <% else %>
-        <li class="nav-item d-flex">
-          <p class="mt-2"> Vous êtes propriétaires ? </p>
+        <li class="nav-item">
+          <%= link_to "Vous êtes propriétaires ?", '#', class: "nav-link" %>
+        </li>
+        <li class="nav-item">
           <%= link_to "Connexion", new_user_session_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
           <%= link_to "Inscription", new_user_registration_path, class: "nav-link" %>
         </li>
       <% end %>
     </ul>
   </div>
 </div>
+
