--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,12 +1,13 @@
 .table {
-  border-bottom: 1px solid #ddd;
+  border-top: 1px solid #ddd;
   padding: 0.75rem;
   font-weight: normal;
-    overflow: scroll;
+  overflow: scroll;
   td {
     font-size : 20px;
     padding : 6px;
   }
+
 }
 
 .upper-part {
@@ -36,40 +37,3 @@
 
 }
 /* Style the tab */
-.tab {
-  overflow: hidden;
-  // border: 1px solid #ccc;
-  background-color: #d5ffed;
-  border-radius: 5px;
-}
-
-/* Style the buttons that are used to open the tab content */
-.tab button {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-  background-color: #1EDD88;
-}
-
-/* Create an active/current tablink class */
-.tab button.active {
-  background-color: #1EDD88;
-}
-
-
-/* Style the tab content */
-.tabcontent {
-  display: none;
-  padding: 10px 22px;
-  // border: 1px solid #ccc;
-  border-top: none;
-}
