--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -6,14 +6,18 @@
   <div class="upper-part">
     <div class="upper left">
       <div class="tab">
-        <button class="tablinks btn btn-success" id="defaultOpen" onclick="openCity(event, 'RENTER')" > OPTION 1</button>
-        <button class="tablinks btn btn-success" onclick="openCity(event, 'OWNER')" > OPTION 2</button>
+        <button class="tablinks btn btn btn-success" id="defaultOpen" onclick="openCity(event, 'appart')" >Mon Appart</button>
+        <button class="tablinks btn btn-success" onclick="openCity(event, 'document')" >Mes documents</button>
+        <button class="tablinks btn btn-success" onclick="openCity(event, 'edl')" >Etat des lieux</button>
       </div>
-      <div id="RENTER" class="product-container tabcontent bg-white">
-        Propriétaire 1
+      <div id="appart" class="product-container tabcontent bg-white">
+        APPARTEMENT 1
       </div>
-      <div id="OWNER" class="product-container tabcontent bg-white">
-        Propriétaire 2
+      <div id="document" class="product-container tabcontent bg-white">
+        DOCUMENTS
+      </div>
+      <div id="edl" class="product-container tabcontent bg-white">
+        ETAT des LIEUX
       </div>
     </div>
 
