--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -6,21 +6,24 @@
   <div class="upper-part">
     <div class="upper left">
       <div class="tab">
-        <button class="tablinks btn btn btn-success" id="defaultOpen" onclick="openCity(event, 'appart')" >Mon Appart</button>
+        <button class="tablinks btn btn btn-success" id="defaultOpen" onclick="openCity(event, 'appart')" >Mon Appartement</button>
         <button class="tablinks btn btn-success" onclick="openCity(event, 'document')" >Mes documents</button>
         <button class="tablinks btn btn-success" onclick="openCity(event, 'edl')" >Etat des lieux</button>
       </div>
-      <div id="appart" class="product-container tabcontent bg-white">
+      <div id="appart" class="product-container tabcontent bg-white d-flex">
         <% if @flat %>
-
-          <%= @flat.address %>
-          <%= @flat.description %>
-          <%= @flat.area %>
-
-          <%= @flat.syndic_name %>
-          <%= @flat.syndic_phone %>
-          <%= @flat.syndic_email %>
-
+          <div class="carrac">
+            <h1>Caractéristiques</h1>
+            <span> <%= @flat.address %></span>
+            <span> <%= @flat.description %></span>
+            <span> <%= @flat.area %></span>
+          </div>
+          <div class="carrac">
+            <h1>Coordonnées du Syndic</h1>
+            <span> <%= @flat.syndic_name %></span>
+            <span> <%= @flat.syndic_phone %></span>
+            <span> <%= @flat.syndic_email %></span>
+          </div>
 
         <% else %>
           Pas de location en cours
