--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -10,7 +10,7 @@
         <button class="tablinks btn btn-success" onclick="openCity(event, 'document')" >Mes documents</button>
         <button class="tablinks btn btn-success" onclick="openCity(event, 'edl')" >Etat des lieux</button>
       </div>
-      <div id="appart" class="product-container tabcontent bg-white d-flex">
+      <div id="appart" class="product-container tabcontent bg-white">
         <% if @flat %>
           <div class="carrac">
             <h1>Caractéristiques</h1>
