--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -5,23 +5,23 @@
   <div class="upper-part">
     <div class="upper left">
       <div class="tab">
-        <button class="tablinks btn btn btn-success" id="defaultOpen" onclick="openCity(event, 'appart')" >Mon Appartement</button>
+        <button class="tablinks btn btn-success" id="defaultOpen" onclick="openCity(event, 'appart')" >Mon Appartement</button>
         <button class="tablinks btn btn-success" onclick="openCity(event, 'document')" >Mes documents</button>
         <button class="tablinks btn btn-success" onclick="openCity(event, 'edl')" >Etat des lieux</button>
       </div>
       <div id="appart" class="product-container tabcontent bg-white">
         <% if @flat %>
           <div class="carrac">
-            <h1>Caractéristiques</h1>
+            <h1><i class="far fa-building"> </i>Caractéristiques</h1>
             <span> <%= @flat.address %></span>
             <span> <%= @flat.description %></span>
-            <span> <%= @flat.area %></span>
+            <span> <%= @flat.area %> m2</span>
           </div>
           <div class="carrac">
             <h1>Coordonnées du Syndic</h1>
             <span> <%= @flat.syndic_name %></span>
-            <span> <%= @flat.syndic_phone %></span>
-            <span> <%= @flat.syndic_email %></span>
+            <span> <i class="fas fa-phone"> </i><%= @flat.syndic_phone %></span>
+            <span> <i class="fas fa-envelope-open-text"> </i><%= @flat.syndic_email %></span>
           </div>
 
         <% else %>
@@ -136,7 +136,7 @@ function openCity(evt, cityName) {
   for (i = 0; i < tablinks.length; i++) {
     tablinks[i].className = tablinks[i].className.replace(" active", "");
   }
-  document.getElementById(cityName).style.display = "block";
+  document.getElementById(cityName).style.display = "flex";
   evt.currentTarget.className += " active";
 }
 document.getElementById("defaultOpen").click();
